@@ -8,6 +8,7 @@ Release history for Dist-Zilla-App-Command-dumpwith
 
  [Internals]
  - Theme loading and construction simplified
+ - Theme defaulting uses less useless code.
 
 0.002003 2014-10-31T15:02:11Z 567b541
  [Dependencies::Stats]
